--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "cors": "^2.8.5",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
